// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiButtonGroup is rendered 1`] = `
<fieldset
  class="euiButtonGroup__fieldset"
>
  <legend
    class="euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    aria-label="aria-label"
    class="euiButtonGroup euiButtonGroup--small euiButtonGroup--text testClass1 testClass2"
    data-test-subj="test subject string"
  />
</fieldset>
`;

exports[`EuiButtonGroup props buttonSize compressed is rendered 1`] = `
<fieldset
  class="euiButtonGroup__fieldset"
>
  <legend
    class="euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    aria-label="aria-label"
    class="euiButtonGroup euiButtonGroup--compressed euiButtonGroup--text testClass1 testClass2"
    data-test-subj="test subject string"
  >
    <label
      class="euiButtonGroupButton euiButtonGroupButton--text euiButtonGroupButton--small"
      for="button00"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButton__text"
        >
          <input
            class="euiScreenReaderOnly"
            id="button00"
            type="radio"
          />
          Option one
        </span>
      </span>
    </label>
    <label
      class="euiButtonGroupButton euiButtonGroupButton--text euiButtonGroupButton--small"
      for="button01"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButton__text"
        >
          <input
            class="euiScreenReaderOnly"
            id="button01"
            type="radio"
          />
          Option two
        </span>
      </span>
    </label>
    <label
      class="euiButtonGroupButton euiButtonGroupButton--text euiButtonGroupButton--small"
      for="button02"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButton__text"
        >
          <input
            class="euiScreenReaderOnly"
            id="button02"
            type="radio"
          />
          Option three
        </span>
      </span>
    </label>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup props buttonSize m is rendered 1`] = `
<fieldset
  class="euiButtonGroup__fieldset"
>
  <legend
    class="euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    aria-label="aria-label"
    class="euiButtonGroup euiButtonGroupnull euiButtonGroup--text testClass1 testClass2"
    data-test-subj="test subject string"
  >
    <label
      class="euiButtonGroupButton euiButtonGroupButton--text"
      for="button00"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButton__text"
        >
          <input
            class="euiScreenReaderOnly"
            id="button00"
            type="radio"
          />
          Option one
        </span>
      </span>
    </label>
    <label
      class="euiButtonGroupButton euiButtonGroupButton--text"
      for="button01"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButton__text"
        >
          <input
            class="euiScreenReaderOnly"
            id="button01"
            type="radio"
          />
          Option two
        </span>
      </span>
    </label>
    <label
      class="euiButtonGroupButton euiButtonGroupButton--text"
      for="button02"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButton__text"
        >
          <input
            class="euiScreenReaderOnly"
            id="button02"
            type="radio"
          />
          Option three
        </span>
      </span>
    </label>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup props buttonSize s is rendered 1`] = `
<fieldset
  class="euiButtonGroup__fieldset"
>
  <legend
    class="euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    aria-label="aria-label"
    class="euiButtonGroup euiButtonGroup--small euiButtonGroup--text testClass1 testClass2"
    data-test-subj="test subject string"
  >
    <label
      class="euiButtonGroupButton euiButtonGroupButton--text euiButtonGroupButton--small"
      for="button00"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButton__text"
        >
          <input
            class="euiScreenReaderOnly"
            id="button00"
            type="radio"
          />
          Option one
        </span>
      </span>
    </label>
    <label
      class="euiButtonGroupButton euiButtonGroupButton--text euiButtonGroupButton--small"
      for="button01"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButton__text"
        >
          <input
            class="euiScreenReaderOnly"
            id="button01"
            type="radio"
          />
          Option two
        </span>
      </span>
    </label>
    <label
      class="euiButtonGroupButton euiButtonGroupButton--text euiButtonGroupButton--small"
      for="button02"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButton__text"
        >
          <input
            class="euiScreenReaderOnly"
            id="button02"
            type="radio"
          />
          Option three
        </span>
      </span>
    </label>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup props color danger is rendered 1`] = `
<fieldset
  class="euiButtonGroup__fieldset"
>
  <legend
    class="euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    aria-label="aria-label"
    class="euiButtonGroup euiButtonGroup--small euiButtonGroup--danger testClass1 testClass2"
    data-test-subj="test subject string"
  >
    <label
      class="euiButtonGroupButton euiButtonGroupButton--danger euiButtonGroupButton--small"
      for="button00"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButton__text"
        >
          <input
            class="euiScreenReaderOnly"
            id="button00"
            type="radio"
          />
          Option one
        </span>
      </span>
    </label>
    <label
      class="euiButtonGroupButton euiButtonGroupButton--danger euiButtonGroupButton--small"
      for="button01"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButton__text"
        >
          <input
            class="euiScreenReaderOnly"
            id="button01"
            type="radio"
          />
          Option two
        </span>
      </span>
    </label>
    <label
      class="euiButtonGroupButton euiButtonGroupButton--danger euiButtonGroupButton--small"
      for="button02"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButton__text"
        >
          <input
            class="euiScreenReaderOnly"
            id="button02"
            type="radio"
          />
          Option three
        </span>
      </span>
    </label>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup props color ghost is rendered 1`] = `
<fieldset
  class="euiButtonGroup__fieldset"
>
  <legend
    class="euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    aria-label="aria-label"
    class="euiButtonGroup euiButtonGroup--small euiButtonGroup--ghost testClass1 testClass2"
    data-test-subj="test subject string"
  >
    <label
      class="euiButtonGroupButton euiButtonGroupButton--ghost euiButtonGroupButton--small"
      for="button00"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButton__text"
        >
          <input
            class="euiScreenReaderOnly"
            id="button00"
            type="radio"
          />
          Option one
        </span>
      </span>
    </label>
    <label
      class="euiButtonGroupButton euiButtonGroupButton--ghost euiButtonGroupButton--small"
      for="button01"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButton__text"
        >
          <input
            class="euiScreenReaderOnly"
            id="button01"
            type="radio"
          />
          Option two
        </span>
      </span>
    </label>
    <label
      class="euiButtonGroupButton euiButtonGroupButton--ghost euiButtonGroupButton--small"
      for="button02"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButton__text"
        >
          <input
            class="euiScreenReaderOnly"
            id="button02"
            type="radio"
          />
          Option three
        </span>
      </span>
    </label>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup props color primary is rendered 1`] = `
<fieldset
  class="euiButtonGroup__fieldset"
>
  <legend
    class="euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    aria-label="aria-label"
    class="euiButtonGroup euiButtonGroup--small euiButtonGroup--primary testClass1 testClass2"
    data-test-subj="test subject string"
  >
    <label
      class="euiButtonGroupButton euiButtonGroupButton--primary euiButtonGroupButton--small"
      for="button00"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButton__text"
        >
          <input
            class="euiScreenReaderOnly"
            id="button00"
            type="radio"
          />
          Option one
        </span>
      </span>
    </label>
    <label
      class="euiButtonGroupButton euiButtonGroupButton--primary euiButtonGroupButton--small"
      for="button01"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButton__text"
        >
          <input
            class="euiScreenReaderOnly"
            id="button01"
            type="radio"
          />
          Option two
        </span>
      </span>
    </label>
    <label
      class="euiButtonGroupButton euiButtonGroupButton--primary euiButtonGroupButton--small"
      for="button02"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButton__text"
        >
          <input
            class="euiScreenReaderOnly"
            id="button02"
            type="radio"
          />
          Option three
        </span>
      </span>
    </label>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup props color secondary is rendered 1`] = `
<fieldset
  class="euiButtonGroup__fieldset"
>
  <legend
    class="euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    aria-label="aria-label"
    class="euiButtonGroup euiButtonGroup--small euiButtonGroup--secondary testClass1 testClass2"
    data-test-subj="test subject string"
  >
    <label
      class="euiButtonGroupButton euiButtonGroupButton--secondary euiButtonGroupButton--small"
      for="button00"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButton__text"
        >
          <input
            class="euiScreenReaderOnly"
            id="button00"
            type="radio"
          />
          Option one
        </span>
      </span>
    </label>
    <label
      class="euiButtonGroupButton euiButtonGroupButton--secondary euiButtonGroupButton--small"
      for="button01"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButton__text"
        >
          <input
            class="euiScreenReaderOnly"
            id="button01"
            type="radio"
          />
          Option two
        </span>
      </span>
    </label>
    <label
      class="euiButtonGroupButton euiButtonGroupButton--secondary euiButtonGroupButton--small"
      for="button02"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButton__text"
        >
          <input
            class="euiScreenReaderOnly"
            id="button02"
            type="radio"
          />
          Option three
        </span>
      </span>
    </label>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup props color text is rendered 1`] = `
<fieldset
  class="euiButtonGroup__fieldset"
>
  <legend
    class="euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    aria-label="aria-label"
    class="euiButtonGroup euiButtonGroup--small euiButtonGroup--text testClass1 testClass2"
    data-test-subj="test subject string"
  >
    <label
      class="euiButtonGroupButton euiButtonGroupButton--text euiButtonGroupButton--small"
      for="button00"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButton__text"
        >
          <input
            class="euiScreenReaderOnly"
            id="button00"
            type="radio"
          />
          Option one
        </span>
      </span>
    </label>
    <label
      class="euiButtonGroupButton euiButtonGroupButton--text euiButtonGroupButton--small"
      for="button01"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButton__text"
        >
          <input
            class="euiScreenReaderOnly"
            id="button01"
            type="radio"
          />
          Option two
        </span>
      </span>
    </label>
    <label
      class="euiButtonGroupButton euiButtonGroupButton--text euiButtonGroupButton--small"
      for="button02"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButton__text"
        >
          <input
            class="euiScreenReaderOnly"
            id="button02"
            type="radio"
          />
          Option three
        </span>
      </span>
    </label>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup props color warning is rendered 1`] = `
<fieldset
  class="euiButtonGroup__fieldset"
>
  <legend
    class="euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    aria-label="aria-label"
    class="euiButtonGroup euiButtonGroup--small euiButtonGroup--warning testClass1 testClass2"
    data-test-subj="test subject string"
  >
    <label
      class="euiButtonGroupButton euiButtonGroupButton--warning euiButtonGroupButton--small"
      for="button00"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButton__text"
        >
          <input
            class="euiScreenReaderOnly"
            id="button00"
            type="radio"
          />
          Option one
        </span>
      </span>
    </label>
    <label
      class="euiButtonGroupButton euiButtonGroupButton--warning euiButtonGroupButton--small"
      for="button01"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButton__text"
        >
          <input
            class="euiScreenReaderOnly"
            id="button01"
            type="radio"
          />
          Option two
        </span>
      </span>
    </label>
    <label
      class="euiButtonGroupButton euiButtonGroupButton--warning euiButtonGroupButton--small"
      for="button02"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButton__text"
        >
          <input
            class="euiScreenReaderOnly"
            id="button02"
            type="radio"
          />
          Option three
        </span>
      </span>
    </label>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup props idSelected is rendered 1`] = `
<fieldset
  class="euiButtonGroup__fieldset"
>
  <legend
    class="euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    aria-label="aria-label"
    class="euiButtonGroup euiButtonGroup--small euiButtonGroup--text testClass1 testClass2"
    data-test-subj="test subject string"
  >
    <label
      class="euiButtonGroupButton euiButtonGroupButton--text euiButtonGroupButton--small euiButtonGroupButton--fill euiButtonGroupButton-isSelected"
      for="button00"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButton__text"
        >
          <input
            checked=""
            class="euiScreenReaderOnly"
            id="button00"
            type="radio"
          />
          Option one
        </span>
      </span>
    </label>
    <label
      class="euiButtonGroupButton euiButtonGroupButton--text euiButtonGroupButton--small"
      for="button01"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButton__text"
        >
          <input
            class="euiScreenReaderOnly"
            id="button01"
            type="radio"
          />
          Option two
        </span>
      </span>
    </label>
    <label
      class="euiButtonGroupButton euiButtonGroupButton--text euiButtonGroupButton--small"
      for="button02"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButton__text"
        >
          <input
            class="euiScreenReaderOnly"
            id="button02"
            type="radio"
          />
          Option three
        </span>
      </span>
    </label>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup props isDisabled is rendered 1`] = `
<fieldset
  class="euiButtonGroup__fieldset"
>
  <legend
    class="euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    aria-label="aria-label"
    class="euiButtonGroup euiButtonGroup--small euiButtonGroup--text euiButtonGroup--isDisabled testClass1 testClass2"
    data-test-subj="test subject string"
  >
    <button
      class="euiButtonGroupButton euiButtonGroupButton--text euiButtonGroupButton--small euiButtonGroupButton-isDisabled"
      disabled=""
      for="button00"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButton__text"
        >
          <input
            class="euiScreenReaderOnly"
            disabled=""
            id="button00"
            type="radio"
          />
          Option one
        </span>
      </span>
    </button>
    <button
      class="euiButtonGroupButton euiButtonGroupButton--text euiButtonGroupButton--small euiButtonGroupButton-isDisabled"
      disabled=""
      for="button01"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButton__text"
        >
          <input
            class="euiScreenReaderOnly"
            disabled=""
            id="button01"
            type="radio"
          />
          Option two
        </span>
      </span>
    </button>
    <button
      class="euiButtonGroupButton euiButtonGroupButton--text euiButtonGroupButton--small euiButtonGroupButton-isDisabled"
      disabled=""
      for="button02"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButton__text"
        >
          <input
            class="euiScreenReaderOnly"
            disabled=""
            id="button02"
            type="radio"
          />
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup props isFullWidth is rendered 1`] = `
<fieldset
  class="euiButtonGroup__fieldset euiButtonGroup__fieldset--fullWidth"
>
  <legend
    class="euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    aria-label="aria-label"
    class="euiButtonGroup euiButtonGroup--small euiButtonGroup--text euiButtonGroup--fullWidth testClass1 testClass2"
    data-test-subj="test subject string"
  >
    <label
      class="euiButtonGroupButton euiButtonGroupButton--text euiButtonGroupButton--small"
      for="button00"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButton__text"
        >
          <input
            class="euiScreenReaderOnly"
            id="button00"
            type="radio"
          />
          Option one
        </span>
      </span>
    </label>
    <label
      class="euiButtonGroupButton euiButtonGroupButton--text euiButtonGroupButton--small"
      for="button01"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButton__text"
        >
          <input
            class="euiScreenReaderOnly"
            id="button01"
            type="radio"
          />
          Option two
        </span>
      </span>
    </label>
    <label
      class="euiButtonGroupButton euiButtonGroupButton--text euiButtonGroupButton--small"
      for="button02"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButton__text"
        >
          <input
            class="euiScreenReaderOnly"
            id="button02"
            type="radio"
          />
          Option three
        </span>
      </span>
    </label>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup props isIconOnly is rendered 1`] = `
<fieldset
  class="euiButtonGroup__fieldset"
>
  <legend
    class="euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    aria-label="aria-label"
    class="euiButtonGroup euiButtonGroup--small euiButtonGroup--text testClass1 testClass2"
    data-test-subj="test subject string"
  >
    <label
      class="euiButtonGroupButton euiButtonGroupButton--text euiButtonGroupButton--small"
      for="button00"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButton__text euiScreenReaderOnly"
        >
          <input
            class="euiScreenReaderOnly"
            id="button00"
            type="radio"
          />
          Option one
        </span>
      </span>
    </label>
    <label
      class="euiButtonGroupButton euiButtonGroupButton--text euiButtonGroupButton--small"
      for="button01"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButton__text euiScreenReaderOnly"
        >
          <input
            class="euiScreenReaderOnly"
            id="button01"
            type="radio"
          />
          Option two
        </span>
      </span>
    </label>
    <label
      class="euiButtonGroupButton euiButtonGroupButton--text euiButtonGroupButton--small"
      for="button02"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButton__text euiScreenReaderOnly"
        >
          <input
            class="euiScreenReaderOnly"
            id="button02"
            type="radio"
          />
          Option three
        </span>
      </span>
    </label>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup props options are rendered 1`] = `
<fieldset
  class="euiButtonGroup__fieldset"
>
  <legend
    class="euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    aria-label="aria-label"
    class="euiButtonGroup euiButtonGroup--small euiButtonGroup--text testClass1 testClass2"
    data-test-subj="test subject string"
  >
    <label
      class="euiButtonGroupButton euiButtonGroupButton--text euiButtonGroupButton--small"
      for="button00"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButton__text"
        >
          <input
            class="euiScreenReaderOnly"
            id="button00"
            type="radio"
          />
          Option one
        </span>
      </span>
    </label>
    <label
      class="euiButtonGroupButton euiButtonGroupButton--text euiButtonGroupButton--small"
      for="button01"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButton__text"
        >
          <input
            class="euiScreenReaderOnly"
            id="button01"
            type="radio"
          />
          Option two
        </span>
      </span>
    </label>
    <label
      class="euiButtonGroupButton euiButtonGroupButton--text euiButtonGroupButton--small"
      for="button02"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButton__text"
        >
          <input
            class="euiScreenReaderOnly"
            id="button02"
            type="radio"
          />
          Option three
        </span>
      </span>
    </label>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup props type of multi idToSelectedMap is rendered 1`] = `
<fieldset
  class="euiButtonGroup__fieldset"
>
  <legend
    class="euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    aria-label="aria-label"
    class="euiButtonGroup euiButtonGroup--small euiButtonGroup--text testClass1 testClass2"
    data-test-subj="test subject string"
  >
    <button
      aria-pressed="true"
      class="euiButtonGroupButton euiButtonGroupButton--text euiButtonGroupButton--small euiButtonGroupButton--fill euiButtonGroupButton-isSelected"
      id="button00"
      style="min-width:0"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButton__text"
        >
          Option one
        </span>
      </span>
    </button>
    <button
      aria-pressed="true"
      class="euiButtonGroupButton euiButtonGroupButton--text euiButtonGroupButton--small euiButtonGroupButton--fill euiButtonGroupButton-isSelected"
      id="button01"
      style="min-width:0"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButton__text"
        >
          Option two
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--text euiButtonGroupButton--small"
      id="button02"
      style="min-width:0"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButton__text"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;

exports[`EuiButtonGroup props type of multi is rendered 1`] = `
<fieldset
  class="euiButtonGroup__fieldset"
>
  <legend
    class="euiScreenReaderOnly"
  >
    test
  </legend>
  <div
    aria-label="aria-label"
    class="euiButtonGroup euiButtonGroup--small euiButtonGroup--text testClass1 testClass2"
    data-test-subj="test subject string"
  >
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--text euiButtonGroupButton--small"
      id="button00"
      style="min-width:0"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButton__text"
        >
          Option one
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--text euiButtonGroupButton--small"
      id="button01"
      style="min-width:0"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButton__text"
        >
          Option two
        </span>
      </span>
    </button>
    <button
      aria-pressed="false"
      class="euiButtonGroupButton euiButtonGroupButton--text euiButtonGroupButton--small"
      id="button02"
      style="min-width:0"
    >
      <span
        class="euiButtonContent euiButton__content"
      >
        <span
          class="euiButton__text"
        >
          Option three
        </span>
      </span>
    </button>
  </div>
</fieldset>
`;
